<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.loans.fragments.LoanApplicationFragmentOne">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/loan_page_description_1"
            app:fontFamily="@font/opareta"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opareta"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:hint="@string/loan_amount"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:helperTextTextColor="@color/colorAccent"
            app:hintTextColor="@color/colorAccent"
            app:hintTextAppearance="@style/OparetaHintText">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/loan_amount_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opareta"
                android:digits="1234567890"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:fontFamily="@font/opareta"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:helperTextTextColor="@color/colorAccent"
            app:hintTextColor="@color/colorAccent"
            android:hint="@string/payback_period"
            app:helperTextTextAppearance="@style/OparetaHelperText"
            app:hintTextAppearance="@style/OparetaHintText">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/payback_period_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opareta"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/proceed_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/float_button"
            android:enabled="true"
            android:fontFamily="@font/opareta"
            android:text="@string/request_loan"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:padding="30dp"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:layout_height="0dp"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:background="#6BFFFFFF"
        android:id="@+id/progress_view"
        android:visibility="gone"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="100dp"
            android:layout_gravity="center"
            android:layout_height="100dp"/>

    </FrameLayout>

</FrameLayout>