<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.loans.fragments.LoanApplicationFragmentTwo">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/loan_page_description_2"
            app:fontFamily="@font/opareta"
            android:layout_height="wrap_content"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            app:cardBackgroundColor="#F2F5FD"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="start"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:text="@string/loan_amount"
                            android:alpha="0.6"
                            app:fontFamily="@font/opareta"
                            android:layout_height="wrap_content"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:textSize="16sp"
                            android:layout_marginTop="4dp"
                            app:fontFamily="@font/opareta"
                            android:id="@+id/loan_amount_text"
                            tools:text="1,000,000"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="start"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:text="@string/interest_rate"
                            android:alpha="0.6"
                            app:fontFamily="@font/opareta"
                            android:layout_height="wrap_content"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:textSize="16sp"
                            android:layout_marginTop="4dp"
                            app:fontFamily="@font/opareta"
                            android:id="@+id/interest_rate_text"
                            tools:text="5%"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="32dp"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="start"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:text="@string/loan_period"
                            android:alpha="0.6"
                            app:fontFamily="@font/opareta"
                            android:layout_height="wrap_content"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:textSize="16sp"
                            android:layout_marginTop="4dp"
                            app:fontFamily="@font/opareta"
                            android:id="@+id/duration_text"
                            tools:text="4 Weeks"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="start"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:text="@string/application_date"
                            app:fontFamily="@font/opareta"
                            android:alpha="0.6"
                            android:layout_height="wrap_content"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:textSize="16sp"
                            android:layout_marginTop="4dp"
                            app:fontFamily="@font/opareta"
                            android:id="@+id/application_date_text"
                            tools:text="May 28,2022"
                            android:layout_height="wrap_content"/>


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="32dp"
                    android:orientation="horizontal"
                    android:baselineAligned="false"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="start"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:text="@string/weekly_payments"
                            app:fontFamily="@font/opareta"
                            android:alpha="0.6"
                            android:layout_height="wrap_content"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:textSize="16sp"
                            android:layout_marginTop="4dp"
                            app:fontFamily="@font/opareta"
                            android:id="@+id/weekly_payment_text"
                            tools:text="8"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="start"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:text="@string/weekly_amount"
                            app:fontFamily="@font/opareta"
                            android:alpha="0.6"
                            android:layout_height="wrap_content"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:textSize="16sp"
                            android:layout_marginTop="4dp"
                            app:fontFamily="@font/opareta"
                            android:id="@+id/weekly_amount_text"
                            tools:text="262,500"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/proceed_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/float_button"
            android:enabled="true"
            android:fontFamily="@font/opareta"
            android:text="@string/confirm_request"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:padding="30dp"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:layout_height="0dp"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:background="#6BFFFFFF"
        android:id="@+id/progress_view"
        android:visibility="gone"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="100dp"
            android:layout_gravity="center"
            android:layout_height="100dp"/>

    </FrameLayout>

</FrameLayout>